# Visual_Homing_Codex

./: .gitignore  README.md
core/: CMakeLists.txt
core/include/visual_homing/: artifact_digest.hpp  bounded_navigator.hpp  camera_profile.hpp  camera_smoke.hpp  coordinate_frames.hpp  dry_run_command_sink.hpp  dry_run_mavlink_bridge.hpp  external_nav_estimator.hpp  frame.hpp  gray8_resize_preprocessor.hpp  gray8_route_matcher.hpp  health.hpp  health_monitor.hpp  inflight_home_reset_safety_gate.hpp  interfaces.hpp  live_external_nav_output_audit_log.hpp  live_external_nav_output_session.hpp  live_mavlink_bridge.hpp  live_mavlink_external_nav_writer.hpp  live_mavlink_output_audit_log.hpp  live_mavlink_output_safety_gate.hpp  live_mavlink_output_session.hpp  live_mavlink_serial_writer.hpp  live_verification_capture.hpp  local_reset_dry_run_session.hpp  mavlink.hpp  mavlink_telemetry_adapter.hpp  mavlink_telemetry_capture.hpp  mavlink_telemetry_inspector.hpp  mavlink_telemetry_stream.hpp  navigation.hpp  pi_camera_source.hpp  pipeline_harness.hpp  rc_switch_trigger_decoder.hpp  replay_frame_source.hpp  route.hpp  route_artifact_check.hpp  route_descriptor_index.hpp  route_local_odometry.hpp  route_local_odometry_estimator.hpp  (+10 more)
core/src/: artifact_digest.cpp  bounded_navigator.cpp  camera_profile.cpp  camera_smoke.cpp  coordinate_frames.cpp  dry_run_command_sink.cpp  dry_run_mavlink_bridge.cpp  external_nav_estimator.cpp  gray8_resize_preprocessor.cpp  gray8_route_matcher.cpp  health_monitor.cpp  inflight_home_reset_safety_gate.cpp  live_external_nav_output_audit_log.cpp  live_external_nav_output_session.cpp  live_mavlink_bridge.cpp  live_mavlink_external_nav_writer.cpp  live_mavlink_output_audit_log.cpp  live_mavlink_output_safety_gate.cpp  live_mavlink_output_session.cpp  live_mavlink_serial_writer.cpp  live_verification_capture.cpp  local_reset_dry_run_session.cpp  main.cpp  mavlink_telemetry_adapter.cpp  mavlink_telemetry_capture.cpp  mavlink_telemetry_inspector.cpp  mavlink_telemetry_stream.cpp  pi_camera_source.cpp  pipeline_harness.cpp  rc_switch_trigger_decoder.cpp  replay_frame_source.cpp  route_artifact_check.cpp  route_descriptor_index.cpp  route_local_odometry.cpp  route_local_odometry_estimator.cpp  route_package_builder.cpp  route_package_manifest.cpp  route_signature.cpp  route_signature_entry.cpp  route_signature_recorder.cpp  (+5 more)
core/tests/: bounded_navigator_test.cpp  camera_profile_test.cpp  camera_smoke_test.cpp  coordinate_frames_test.cpp  dry_run_command_sink_test.cpp  dry_run_mavlink_bridge_test.cpp  external_nav_estimator_test.cpp  gray8_resize_preprocessor_test.cpp  gray8_route_matcher_test.cpp  health_monitor_test.cpp  inflight_home_reset_safety_gate_test.cpp  live_external_nav_output_audit_log_test.cpp  live_external_nav_output_session_test.cpp  live_mavlink_bridge_test.cpp  live_mavlink_external_nav_writer_test.cpp  live_mavlink_output_audit_log_test.cpp  live_mavlink_output_safety_gate_test.cpp  live_mavlink_output_session_audit_file_test.cpp  live_mavlink_output_session_test.cpp  live_mavlink_serial_writer_test.cpp  live_verification_capture_test.cpp  local_reset_dry_run_session_test.cpp  mavlink_telemetry_adapter_test.cpp  mavlink_telemetry_inspector_test.cpp  mavlink_telemetry_stream_test.cpp  pi_camera_source_test.cpp  pipeline_harness_test.cpp  rc_switch_trigger_decoder_test.cpp  replay_frame_source_test.cpp  route_artifact_check_test.cpp  route_descriptor_index_test.cpp  route_local_odometry_estimator_test.cpp  route_local_odometry_test.cpp  route_package_builder_test.cpp  route_package_manifest_test.cpp  route_signature_recorder_test.cpp  route_signature_stream_writer_test.cpp  route_signature_streaming_recorder_test.cpp  route_signature_test.cpp  verification_keyframe_selector_test.cpp  (+1 more)
core/tests/data/: rc12_trigger_trace.txt
core/tools/: live_verification_capture_benchmark.cpp  rc12_local_reset_dry_run.cpp  route_descriptor_index_builder.cpp  route_local_odometry_sitl_producer.cpp
docs/: ARCHITECTURE.md  BUILDING.md  CAMERA_PROFILES.md  CLAUDE_CODE_PROMPT.md  CLAUDE_CODE_PROMPT_NEW.md  COORDINATE_FRAME_CONTRACT_UA.md  DECISIONS.md  FIELD_DRY_RUN_PLAN.md  FIELD_EVIDENCE_2026-07-02_UA.md  FIELD_EVIDENCE_2026-07-09_OV9281_UA.md  FIELD_EVIDENCE_2026-07-10_OV9281_UA.md  FIELD_EVIDENCE_2026-07-12_OV9281_UA.md  FIELD_EVIDENCE_2026-07-13_OV9281_UA.md  FIELD_TEST_REPORT_AND_NEXT_STEPS.md  FIELD_TEST_REPORT_AND_NEXT_STEPS_UA.md  HARDWARE_ACCESS_BASELINE_UA.md  INFLIGHT_HOME_RESET_OVERRIDE_PLAN_UA.md  JT_ZERO_HANDOFF_INTEGRATION_PLAN_UA.md  LIVE_OUTPUT_BENCH_PROPS_OFF_PLAN.md  LIVE_OUTPUT_READINESS_RECORD.md  LIVE_OUTPUT_SAFETY_PLAN.md  LIVE_VERIFICATION_CAPTURE_UA.md  PI_BACKUP_RESTORE.md  PI_BUILDING.md  PI_VERIFICATION_CAPTURE_BENCHMARK_2026-07-19_UA.md  PROJECT_MEMORY.md  REFERENCE_REPOSITORY_AUDIT_UA.md  ROADMAP.md  ROUTE_DESCRIPTOR_INDEX_V1_UA.md  ROUTE_LOCAL_ODOMETRY_SITL_UA.md  ROUTE_PACKAGE_MANIFEST_V1_UA.md  ROUTE_SIGNATURE_FORMAT.md  SESSION_EXTRACTS_BANK_UA.md  SESSION_LOG.md  VERIFICATION_GATE_SELECTOR_UA.md  VERIFICATION_PACKAGE_WRITER_UA.md  VISUAL_HOMING_IDEAS_UA.md  VISUAL_HOMING_RTL_HOVER_PLAN_UA.md  VISUAL_SCALE_ALTITUDE_STRATEGY.md
notes/: README.md
scripts/: bootstrap-pi.sh  build-arducopter-4.3.6-sitl.py  capture-fc-baseline-pi.py  capture-fc-local-frame-pi.py  capture-fc-rc-baseline-pi.py  check-external-nav-output-audit-log.sh  check-external-nav-readiness-log.sh  check-external-nav-telemetry-sanity-pi.sh  check-live-readiness-log.sh  check-live-session-audit-log.sh  check-pi-field-readiness.sh  check-route-quality-log.sh  context-status.ps1  export-external-nav-readiness-json.sh  memory.ps1  operator-readiness-summary.sh  run-external-nav-dry-run-pi.sh  run-external-nav-output-acceptance-probe-pi.sh  run-external-nav-output-bench-props-off-attach-pi.sh  run-external-nav-output-bench-props-off-send-pi.sh  run-field-route-record-pi.sh  run-live-output-bench-props-off-attach-pi.sh  run-live-output-bench-props-off-pi.sh  run-live-output-bench-props-off-send-pi.sh  run-rc12-local-reset-dry-run-pi.sh  run-route-local-odometry-sitl.py  (+4 more)
(+97 files in other folders)
